--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="119dp"
         android:textColor="@color/white"
-        android:backgroundTint="#673AB7"
+        android:backgroundTint="@color/primary_color"
         android:text="@string/register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="79dp"
-        android:backgroundTint="#673AB7"
+        android:backgroundTint="@color/primary_color"
         android:text="@string/login"
         android:textColorLink="@color/white"
         android:textColor="@color/white"
