--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -12,6 +12,8 @@
         android:id="@+id/editItemTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:gravity="center"
         android:padding="16dp"
         android:text="@string/edit_item"
@@ -25,7 +27,9 @@
         android:id="@+id/editItemNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="52dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/item_name"
         android:inputType="text"
@@ -39,7 +43,9 @@
         android:id="@+id/editItemDescriptionEditText"
         android:layout_width="match_parent"
         android:layout_height="158dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="64dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/item_description"
         android:inputType="text"
@@ -53,7 +59,9 @@
         android:id="@+id/editQuantityEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="52dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/quantity"
         android:inputType="number"
@@ -67,7 +75,9 @@
         android:id="@+id/editItemButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="123dp"
         android:text="@string/edit_item"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,15 +88,8 @@
 
     <ImageButton
         android:id="@+id/editItemCloseButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="336dp"
-        android:layout_marginBottom="656dp"
-        android:contentDescription="@string/close_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
