--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -20,17 +20,22 @@
         android:id="@+id/currentUsernameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="32dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="@string/current_username"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editAccountCloseButton" />
 
     <EditText
         android:id="@+id/editPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:hint="@string/password"
         android:importantForAutofill="no"
@@ -45,7 +50,9 @@
         android:id="@+id/editPasswordVerifyEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:hint="@string/verify_password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
@@ -59,7 +66,9 @@
         android:id="@+id/editEmailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:hint="@string/email"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
@@ -73,7 +82,9 @@
         android:id="@+id/editPhoneEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:hint="@string/phone_number"
         android:importantForAutofill="no"
         android:inputType="phone"
@@ -87,7 +98,9 @@
         android:id="@+id/editAccountButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="32dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="@string/save_changes"
