--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,16 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="20dp"
+    android:padding="32dp"
     tools:context=".LoginActivity">
 
     <EditText
         android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="249dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="49dp"
-        android:autoText="false"
         android:ems="10"
         android:hint="@string/username"
         android:inputType="text"
@@ -32,7 +33,9 @@
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="49dp"
+        android:layout_marginEnd="24dp"
         android:autoText="false"
         android:ems="10"
         android:hint="@string/password"
@@ -50,11 +53,13 @@
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="119dp"
-        android:textColor="@color/white"
         android:backgroundTint="@color/primary_color"
         android:text="@string/register"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,11 +69,13 @@
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="79dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/primary_color"
         android:text="@string/login"
-        android:textColorLink="@color/white"
         android:textColor="@color/white"
+        android:textColorLink="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
