--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,25 +5,30 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="24dp"
     tools:context=".RegistrationActivity">
 
     <EditText
         android:id="@+id/newUsernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/username"
         android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
-        tools:layout_editor_absoluteX="24dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />
 
     <EditText
         android:id="@+id/newPasswordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -36,7 +41,9 @@
         android:id="@+id/newPasswordVerifyEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/verify_password"
         android:inputType="textPassword"
@@ -47,12 +54,13 @@
         tools:ignore="TextFields" />
 
 
-
     <EditText
         android:id="@+id/newEmailEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
@@ -65,7 +73,9 @@
         android:id="@+id/newPhoneEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="@string/phone_number"
         android:inputType="phone"
@@ -85,21 +95,26 @@
         android:id="@+id/newRegisterButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/primary_color"
         android:text="@string/register"
-        app:layout_constraintTop_toBottomOf="@+id/newPhoneEditText"
-        tools:layout_editor_absoluteX="20dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newPhoneEditText" />
 
     <TextView
         android:id="@+id/registerTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
         android:gravity="center_horizontal"
         android:text="@string/register_new_user"
         android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editItemCloseButton" />
 
